# mia

./: CMakeLists.txt  LICENSE  README.md
src/demo/: main.cpp
src/mia/: Common.h
src/mia/Activators/: Activators.h  ReLU.h  Sigmoid.h
src/mia/Core/: NDArrayView.h
src/mia/Layers/: Dense.cpp  Dense.h  Flatten.cpp  Flatten.h  InputLayer.h  Layer.cpp  Layer.h
src/mia/Maths/: Matrix.cpp  Matrix.h
src/mia/Models/: Model.h  Sequential.cpp  Sequential.h
src/mia_tests/Activators/: ReLU.tests.cpp  Sigmoid.tests.cpp
src/mia_tests/Core/: NDArrayView.tests.cpp
src/mia_tests/Layers/: Dense.tests.cpp  Flatten.tests.cpp  Layer.tests.cpp
src/mia_tests/Layers/Helpers/: LayerManipulator.cpp  LayerManipulator.h  TestInputLayer.cpp  TestInputLayer.h  TestInputLayer.tests.cpp
src/mia_tests/Maths/: Matrix.tests.cpp
src/mia_tests/Models/: Sequential.tests.cpp
